Changes for JDK 21 support + update readme