@@ -17,7 +17,7 @@ import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.nio.FloatBuffer;
@@ -169,15 +169,15 @@ final class Transformer {
     final Weights weights; // the weights of the model
     final RunState state; // buffers for the "wave" of activations in the forward pass
     // some more state needed to properly clean up the memory mapping (sigh)
-    final SegmentScope memoryScope; // scope of the memory mapping
+    final Arena memoryArena; // scope of the memory mapping
     final MemorySegment data; // memory mapped data pointer
     final long file_size; // size of the checkpoint file in bytes
 
     Transformer(String checkpoint_path) throws IOException {
         try (FileChannel fileChannel = FileChannel.open(Paths.get(checkpoint_path), StandardOpenOption.READ)) {
             this.file_size = fileChannel.size();
-            this.memoryScope = SegmentScope.auto();
-            MemorySegment mappedFile = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0, this.file_size, this.memoryScope);
+            this.memoryArena = Arena.ofAuto();
+            MemorySegment mappedFile = fileChannel.map(FileChannel.MapMode.READ_ONLY, 0, this.file_size, this.memoryArena);
             this.data = mappedFile;
             int configSize = 7 * Integer.BYTES;
             // read in the config header
